# vulnerable_crate

./: Cargo.toml  README.md
src/: main.rs
