[package]
name = "vulnerable_crate"
description = "A test crate including different kind of vulnerable dependencies"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://rustsec.org/advisories/RUSTSEC-2022-0058.html
# informational = "notice
inconceivable = "0.9.0"
# https://rustsec.org/advisories/RUSTSEC-2023-0040.html
# informational = "unmaintained"
users = "0.11.0"
# https://rustsec.org/advisories/RUSTSEC-2023-0047.html
# informational = "unsound"
lmdb-rs = "0.7.1"
# https://rustsec.org/advisories/RUSTSEC-2022-0083.html
# high score, crypto-failure
evm = "0.36.0"
# https://rustsec.org/advisories/RUSTSEC-2021-0147.html
# withdrawn unmaintained advisory
daemonize = "0.5.0"